# reproducr

./: .gitignore  README.md  coding.md  create_esummary_table.sql  data-analytics.ipynb  data-transforms.sql  database.py  export.bash  llm_processor.py  main.py  parser.py  prompts.yaml  pubmed.py  pyproject.toml  robots.py  scraper.py  tester.ipynb
.ipynb_checkpoints/: data-analytics-checkpoint.ipynb
postgres/: efetch.sql
