[project]
name = "reproducr"
version = "1.0.0"
description = "Coursework investigating reproducible research, with an emphasis on data collection and cleaning."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.0.0",
    "bs4>=0.0.2",
    "connectorx>=0.4.5",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "lxml>=6.0.2",
    "notebook>=7.5.5",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "polars>=1.38.1",
    "pyarrow>=23.0.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "tqdm>=4.67.3",
    "sentence-transformers>=5.3.0",
    "urllib3>=2.6.3",
    "spacy>=3.8.14",
]
